--- a/Android/Maintenance/app/src/main/res/layout/client_registration.xml
+++ b/Android/Maintenance/app/src/main/res/layout/client_registration.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/client_asset_registerScrollScrollView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
@@ -13,6 +10,17 @@
       android:paddingTop="@dimen/activity_vertical_margin"
       tools:context=".activities.ClientRegistration">
 
+ <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+     android:id="@+id/ScrollScrollView"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent"
+     android:layout_marginBottom="60dp">
+
+  <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:paddingLeft="55dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,13 +28,14 @@
         android:text="@string/client_registration"
         android:id="@+id/client_register_header_text"
         android:layout_alignParentTop="true"
+        android:textAlignment="center"
         android:layout_centerHorizontal="true" />
 
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_name"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/client_name"
          android:layout_below="@+id/client_register_header_text"
          android:layout_centerHorizontal="true" />
@@ -36,7 +45,7 @@
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_email"
          android:hint="@string/client_email"
-         android:ems="10"
+         android:ems="12"
          android:layout_below="@+id/edit_client_name"
          android:layout_alignStart="@+id/edit_client_name" />
 
@@ -44,7 +53,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_desc"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/description"
          android:layout_below="@+id/edit_client_email"
          android:layout_alignStart="@+id/edit_client_email" />
@@ -53,7 +62,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_address"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/addess"
          android:layout_below="@+id/edit_client_desc"
          android:layout_alignStart="@+id/edit_client_desc" />
@@ -62,7 +71,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_street1"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/street_1"
          android:layout_below="@+id/edit_client_address"
          android:layout_alignStart="@+id/edit_client_address" />
@@ -71,7 +80,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_street2"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/street_2"
          android:layout_below="@+id/edit_client_street1"
          android:layout_alignStart="@+id/edit_client_street1" />
@@ -80,7 +89,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_street3"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/street_3"
          android:layout_below="@+id/edit_client_street2"
          android:layout_alignStart="@+id/edit_client_street2" />
@@ -89,7 +98,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_country"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/country"
          android:layout_below="@+id/edit_client_street3"
          android:layout_alignStart="@+id/edit_client_street3" />
@@ -98,7 +107,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_state"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/state"
          android:layout_below="@+id/edit_client_country"
          android:layout_alignStart="@+id/edit_client_country" />
@@ -107,7 +116,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_city"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/city"
          android:layout_below="@+id/edit_client_state"
          android:layout_alignStart="@+id/edit_client_state" />
@@ -116,7 +125,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_location"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/location"
          android:layout_below="@+id/edit_client_city"
          android:layout_alignStart="@+id/edit_client_city" />
@@ -125,7 +134,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="number"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/zip_code"
          android:id="@+id/edit_client_zip"
          android:layout_below="@+id/edit_client_location"
@@ -135,7 +144,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="phone"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/phone_no"
          android:id="@+id/edit_client_phone"
          android:layout_below="@+id/edit_client_zip"
@@ -145,7 +154,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="phone"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/mobile_no"
          android:id="@+id/edit_client_mobile"
          android:layout_below="@+id/edit_client_phone"
@@ -155,7 +164,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="phone"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/fax"
          android:id="@+id/edit_client_fax"
          android:layout_below="@+id/edit_client_mobile"
@@ -165,24 +174,36 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/edit_client_website"
-         android:ems="10"
+         android:ems="12"
          android:hint="@string/website"
          android:layout_below="@+id/edit_client_fax"
          android:layout_alignStart="@+id/edit_client_fax" />
+  </LinearLayout>
 
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="#3F51B5"
-         android:layout_marginTop="25dp"
-         android:textColor="#fff"
-         android:textStyle="bold"
-         android:text="@string/client_register"
-         android:id="@+id/client_register_btn"
-         android:layout_below="@+id/edit_client_website"
-         android:layout_alignStart="@+id/edit_client_website"
-         android:layout_alignEnd="@+id/edit_client_website" />
+ </ScrollView>
 
+ <RelativeLayout
+     android:id="@+id/update_sd"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:layout_alignParentBottom="true"
+     android:background="#689F38"
+     android:gravity="center"
+     android:layout_gravity="center"
+     android:layout_marginBottom="0dp">
+  <Button
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/colorPrimary"
+      android:textColor="@color/white_color"
+      android:textStyle="bold"
+      android:textSize="20dp"
+      android:text="@string/client_register"
+      android:id="@+id/client_register_btn"
+      android:layout_gravity="center_horizontal"
+      android:layout_marginBottom="0dp"/>
+ </RelativeLayout>
 
  </RelativeLayout>
-</ScrollView>
+
+
