--- a/Android/Maintenance/app/src/main/res/layout/content_main.xml
+++ b/Android/Maintenance/app/src/main/res/layout/content_main.xml
@@ -5,22 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.AdminMainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
-    <TextView
+    <ListView
+        android:id="@+id/listView_clients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone"
-        android:id="@+id/token"
-        android:layout_alignParentTop="true"
+        android:padding="0dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:divider="@color/white_color"
+        android:dividerHeight="15dp" />
+
+
+    <ImageButton
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="16dp"
+        android:id="@+id/add_client"
+        android:clickable="true"
+        android:src="@drawable/plus"
+        android:background="@drawable/oval"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="155dp"
-        android:layout_marginTop="88dp" />
+        android:layout_alignParentBottom="true"/>
+
+
 </RelativeLayout>
