--- a/Android/Maintenance/app/src/main/res/layout/forgot_password.xml
+++ b/Android/Maintenance/app/src/main/res/layout/forgot_password.xml
@@ -9,7 +9,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:hint="Email"
-        android:id="@+id/editText"
+        android:id="@+id/forgot_email"
         android:layout_marginTop="138dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -19,9 +19,23 @@
         android:layout_height="wrap_content"
         android:text="@string/reset_password"
         android:id="@+id/resetpassbtn"
-        android:textColor="#fff"
+        android:textSize="20dp"
+        android:textColor="@color/white_color"
+        android:textStyle="bold"
         android:background="@color/colorPrimary"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_alignEnd="@+id/editText" />
+        android:layout_below="@+id/forgot_email"
+        android:layout_alignStart="@+id/forgot_email"
+        android:layout_marginTop="158dp"
+        android:layout_alignEnd="@+id/forgot_email" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:hint="Phone No"
+        android:id="@+id/forgot_number"
+        android:layout_below="@+id/forgot_email"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp" />
 </RelativeLayout>
