--- a/Android/Maintenance/app/src/main/res/layout/content_user_main.xml
+++ b/Android/Maintenance/app/src/main/res/layout/content_user_main.xml
@@ -9,7 +9,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.android.maintenance.activities.ClientMainActivity"
-    tools:showIn="@layout/app_bar_client_main">
+    tools:context="com.android.maintenance.activities.UserMainActivity"
+    tools:showIn="@layout/app_bar_user_main">
+
+
+    <ListView
+        android:id="@+id/listView_users"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:dividerHeight="10dp" />
 
 </RelativeLayout>
