--- a/Android/Maintenance/app/src/main/res/layout/user_approval.xml
+++ b/Android/Maintenance/app/src/main/res/layout/user_approval.xml
@@ -1,34 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:weightSum="1">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/view">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/row_selecter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/header"
-        android:text="@string/client_approval_list_headertxt"
-        android:textColor="#3b2a1a"
-        android:textStyle="bold"
-        android:textSize="70px"
-        android:padding="15dp"/>
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_below="@+id/view">
 
     <ListView
         android:id="@+id/listView_users"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/header"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:dividerHeight="10dp"
+        android:dividerHeight="3dp"
         android:choiceMode="multipleChoice" />
+
+    <!--<ImageButton
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="16dp"
+        android:id="@+id/add_user"
+        android:clickable="true"
+        android:src="@drawable/plus"
+        android:background="@drawable/oval"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"/>-->
+
+</RelativeLayout>
+
 
 </RelativeLayout>
