--- a/Android/Maintenance/app/src/main/res/layout/userlist_view.xml
+++ b/Android/Maintenance/app/src/main/res/layout/userlist_view.xml
@@ -1,28 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="5dp"
+    android:layout_margin="10dp"
+    android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:background="@color/white_color">
+    android:paddingTop="15dp">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="User Name"
-        android:textColor="@color/black_color"
-        android:id="@+id/user_name"/>
-
-    <TextView
         android:layout_width="wrap_content"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/user_75"
+        android:id="@+id/image_layout">
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/image_layout"
+        android:layout_alignBottom="@+id/image_layout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/black_color"
+            android:text="Email"
+            android:id="@+id/user_email"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:textSize="20dp"
+            android:text="User Name"
+            android:paddingLeft="5dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/black_color"
+            android:id="@+id/user_name"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+
+    <!--<RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:textColor="@color/black_color"
-        android:text="Email"
-        android:id="@+id/user_email"/>
+        android:layout_gravity="right">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
+            android:textColor="@color/black_color"
+            android:text="Email"
+            android:id="@+id/user_email" />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="User Name"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/black_color"
+            android:id="@+id/user_name"
+            android:layout_gravity="center_horizontal" />
+
+    </RelativeLayout>
+    -->
+
+</RelativeLayout>
