--- a/Android/Maintenance/app/src/main/res/values/colors.xml
+++ b/Android/Maintenance/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#303F9F</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="button_color">#33CAFF</color>
     <color name="colorAccent">#BDC9FC</color>
     <color name="light_gray">#d1d1d1</color>
     <color name="white_color">#ffffff</color>
+   <!-- <color name="orange_color">#</color>-->
     <color name="black_color">#000000</color>
     <color name="red_color">#FF0000</color>
     <drawable name="bluecolor">#303F9F</drawable>
