--- a/Android/Maintenance/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/Maintenance/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,6 +27,10 @@
             android:title="My Employees" />
 
         <item
+            android:id="@+id/nav_claim"
+            android:title="Claim" />
+
+        <item
             android:id="@+id/nav_machine_spare"
             android:title="Machine Spare" />
 
