--- a/Android/Maintenance/app/src/main/res/layout/asset_log.xml
+++ b/Android/Maintenance/app/src/main/res/layout/asset_log.xml
@@ -38,7 +38,8 @@
             android:id="@+id/m_type"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="50dp" />
+            android:layout_marginTop="50dp"
+            android:layout_alignEnd="@+id/asset_problem" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,9 +95,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/m_type_spinner"
-            android:layout_above="@+id/l_create_date"
-            android:layout_alignEnd="@+id/edit_create_date"
-            android:layout_toEndOf="@+id/m_type" />
+            android:layout_alignBottom="@+id/m_type"
+            android:layout_alignStart="@+id/edit_create_date"
+            android:layout_alignTop="@+id/m_type"
+            android:layout_alignEnd="@+id/edit_create_date" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -105,7 +107,7 @@
             android:ems="10"
             android:id="@+id/edit_create_date"
             android:layout_alignBottom="@+id/l_create_date"
-            android:layout_toEndOf="@+id/m_type" />
+            android:layout_toEndOf="@+id/l_create_date" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -114,7 +116,8 @@
             android:ems="10"
             android:id="@+id/edit_a_pbm"
             android:layout_alignBottom="@+id/asset_problem"
-            android:layout_alignEnd="@+id/edit_create_date" />
+            android:layout_alignEnd="@+id/edit_create_date"
+            android:layout_alignStart="@+id/edit_create_date" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -123,6 +126,7 @@
             android:ems="10"
             android:id="@+id/edit_comments"
             android:layout_alignBottom="@+id/log_comments"
+            android:layout_alignStart="@+id/edit_a_pbm"
             android:layout_alignEnd="@+id/edit_a_pbm" />
 
         <RadioGroup
@@ -131,27 +135,28 @@
             android:id="@+id/radio_criticality"
             android:weightSum="1"
             android:orientation="horizontal"
-            android:layout_above="@+id/radio_log_through"
+            android:layout_alignBottom="@+id/asset_criticality"
+            android:layout_toEndOf="@+id/asset_problem"
             android:layout_alignStart="@+id/radio_log_through">
+
             <RadioButton android:id="@+id/radio_low"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Low"
-                android:layout_weight="0.29"/>
+                android:layout_weight="0.48" />
             <RadioButton android:id="@+id/radio_medium"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
+                android:layout_height="28dp"
                 android:text="Medium"
-                android:layout_weight="0.41" />
+                android:layout_weight="0.48" />
 
             <RadioButton android:id="@+id/radio_high"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
-                android:text="High"
-                android:layout_weight="0.68" />
+                android:layout_height="match_parent"
+                android:text="High" />
         </RadioGroup>
 
         <RadioGroup
@@ -160,28 +165,26 @@
             android:id="@+id/radio_log_through"
             android:weightSum="1"
             android:orientation="horizontal"
-
             android:layout_above="@+id/log_comments"
-            android:layout_toEndOf="@+id/l_create_date">
+            android:layout_toEndOf="@+id/l_through">
             <RadioButton android:id="@+id/l_app"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="App"
-                android:layout_weight="0.29"/>
+                android:layout_weight="0.61"/>
             <RadioButton android:id="@+id/l_email"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Email"
-                android:layout_weight="0.41" />
+                android:layout_weight="0.19" />
 
             <RadioButton android:id="@+id/l_phone"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
-                android:text="Phone"
-                android:layout_weight="0.68" />
+                android:layout_height="29dp"
+                android:text="Phone" />
         </RadioGroup>
 
         <Button
