--- a/Android/Maintenance/app/src/main/res/layout/content_employee_main.xml
+++ b/Android/Maintenance/app/src/main/res/layout/content_employee_main.xml
@@ -16,11 +16,8 @@
         android:id="@+id/list_emp_machines"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:dividerHeight="10dp" />
+       android:layout_margin="10dp"
+        android:dividerHeight="3dp" />
 
     <ImageButton
         android:layout_width="65dp"
