--- a/Android/Maintenance/app/src/main/res/layout/machine_list_view.xml
+++ b/Android/Maintenance/app/src/main/res/layout/machine_list_view.xml
@@ -11,7 +11,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/view2">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -29,17 +30,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_below="@+id/view2">
 
     <ListView
         android:id="@+id/listView_machines"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:dividerHeight="2dp" />
+        android:layout_margin="10dp"
+        android:dividerHeight="1dp" />
 
 
     <ImageButton
