--- a/Android/Maintenance/app/src/main/res/layout/machine_list_view_detail.xml
+++ b/Android/Maintenance/app/src/main/res/layout/machine_list_view_detail.xml
@@ -5,12 +5,12 @@
 
 
     <RelativeLayout
-        android:layout_width="110dp"
+        android:layout_width="85dp"
         android:layout_height="110dp"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
         android:background="@drawable/asset"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="10dp"
         android:padding="0dp"
         android:id="@+id/relativeLayout">
@@ -33,7 +33,8 @@
             android:id="@+id/machine_title"
             android:textStyle="bold"
             android:layout_above="@+id/machine_address"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignEnd="@+id/delete"
+            android:layout_toEndOf="@+id/relativeLayout2" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,8 +43,9 @@
             android:text="Medium Text"
             android:textColor="#a8a8a8"
             android:id="@+id/machine_address"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignEnd="@+id/delete"
+            android:layout_above="@+id/log"
+            android:layout_toEndOf="@+id/relativeLayout2" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -51,27 +53,22 @@
             android:id="@+id/relativeLayout2" />
 
         <Button
-            android:layout_width="110dp"
+            android:layout_width="115dp"
             android:layout_height="35dp"
             android:text="Log"
             android:textStyle="bold"
-            android:paddingLeft="10dp"
             android:drawableLeft="@drawable/themify_e6c8_32"
             android:id="@+id/log"
-            android:layout_marginRight="5dp"
-            android:paddingRight="15dp"
+            android:layout_marginRight="0dp"
             android:textColor="@color/button_color"
             android:background="@color/light_gray"
             android:layout_alignParentBottom="true"
-            android:layout_alignTop="@+id/delete"
-            android:layout_toStartOf="@+id/delete" />
+            android:layout_alignParentStart="true" />
 
         <Button
             android:layout_width="110dp"
             android:layout_height="35dp"
             android:text="Detete"
-            android:paddingLeft="10dp"
-            android:paddingRight="15dp"
             android:textStyle="bold"
             android:drawableLeft="@drawable/delete"
             android:id="@+id/delete"
