--- a/Android/Maintenance/app/src/main/res/layout/task_tab.xml
+++ b/Android/Maintenance/app/src/main/res/layout/task_tab.xml
@@ -35,6 +35,7 @@
             android:layout_margin="16dp"
             android:id="@+id/add_task"
             android:clickable="true"
+            android:visibility="invisible"
             android:src="@drawable/plus"
             android:background="@drawable/oval"
             android:layout_alignParentEnd="true"
