--- a/Android/Maintenance/app/src/main/res/layout/user_approval_detail.xml
+++ b/Android/Maintenance/app/src/main/res/layout/user_approval_detail.xml
@@ -410,6 +410,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Approve"
+            android:layout_marginRight="2dp"
             android:textColor="@color/white_color"
             android:background="@color/colorPrimaryDark"
             android:id="@+id/approve_button"
@@ -423,14 +424,14 @@
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:text="Reject"
+            android:layout_marginLeft="2dp"
             android:textColor="@color/white_color"
             android:background="@color/red_color"
             android:id="@+id/reject_button"
             android:layout_marginRight="30dp"
             android:layout_marginBottom="72dp"
             android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/approve_button"
-            android:layout_marginStart="54dp" />
+            android:layout_toEndOf="@+id/approve_button" />
 
     <EditText
         android:layout_width="wrap_content"
