--- a/Android/Maintenance/app/src/main/res/layout/business_tab_list.xml
+++ b/Android/Maintenance/app/src/main/res/layout/business_tab_list.xml
@@ -27,6 +27,7 @@
         android:id="@+id/delete"
         android:background="#F2F2F2"
         android:textSize="12dp"
+        android:visibility="invisible"
         android:drawableLeft="@drawable/delete"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
