--- a/Android/Maintenance/app/src/main/res/layout/claim_details.xml
+++ b/Android/Maintenance/app/src/main/res/layout/claim_details.xml
@@ -115,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/relativeLayout3"
         android:id="@+id/relativeLayout4"
-        android:layout_above="@+id/sub_approval">
+        android:layout_above="@+id/finance_approve">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/claim_detail_tabLayout"
@@ -137,7 +137,6 @@
             android:layout_below="@+id/claim_detail_tabLayout" />
 
 
-
     </RelativeLayout>
 
     <Button
@@ -149,7 +148,21 @@
         android:textColor="@color/white_color"
         android:background="@color/colorPrimaryDark"
         android:textStyle="bold"
+        android:visibility="invisible"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/finance_approve"
+        android:text="Approved"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textColor="@color/black_color"
+        android:visibility="invisible"
+        android:layout_above="@+id/sub_approval"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
