--- a/Android/Maintenance/app/src/main/res/layout/conveyanse_tab_list.xml
+++ b/Android/Maintenance/app/src/main/res/layout/conveyanse_tab_list.xml
@@ -85,6 +85,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:id="@+id/delete"
+        android:visibility="invisible"
         android:background="#F2F2F2"
         android:textSize="12dp"
         android:drawableLeft="@drawable/delete"
